added reset function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <button>How big?</button>
+    <button id="reset">How big?</button>
     <div id="container"></div>
 </body>
 
